--- a/admin.html
+++ b/admin.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
@@ -7,10 +7,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://alixb-accessible.github.io/faites-mieux-toolbar/faites-mieux.css">
 <script src="https://alixb-accessible.github.io/faites-mieux-toolbar/faites-mieux.js" defer></script>
+<script src="https://cdn.tailwindcss.com"></script>
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
-import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-auth.js";
 import { getFirestore, collection, addDoc, updateDoc, doc, getDocs } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
+import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-auth.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyAf5L19V1ktK9wKGU87P30xNN9jde4-_Eg",
@@ -20,90 +21,109 @@ const firebaseConfig = {
   messagingSenderId: "1091401553072",
   appId: "1:1091401553072:web:0ddc04b952de5ed1225775"
 };
-
 const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
 const db = getFirestore(app);
+const auth = getAuth(app);
 
-onAuthStateChanged(auth, user => {
-  if(user) {
-    document.getElementById("loginSection").style.display = "none";
-    document.getElementById("adminSection").style.display = "block";
-    loadArticles();
-  } else {
-    document.getElementById("loginSection").style.display = "block";
-    document.getElementById("adminSection").style.display = "none";
+const loginForm = document.getElementById("loginForm");
+const adminForm = document.getElementById("adminForm");
+
+// Authentification simple
+loginForm.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
+  try {
+    await signInWithEmailAndPassword(auth, email, password);
+  } catch (err) {
+    alert("Connexion échouée : " + err.message);
   }
 });
 
-async function login() {
-  const email = document.getElementById("email").value;
-  const pwd = document.getElementById("password").value;
-  try {
-    await signInWithEmailAndPassword(auth, email, pwd);
-  } catch(e) { alert(e.message); }
-}
-
-async function addArticle() {
-  const data = {
-    title: document.getElementById("titleInput").value,
-    excerpt: document.getElementById("excerptInput").value,
-    content: document.getElementById("contentInput").value,
-    category: document.getElementById("categoryInput").value,
-    tags: document.getElementById("tagsInput").value,
-    imageUrl: document.getElementById("imageUrlInput").value,
-    imageAlt: document.getElementById("imageAltInput").value,
-    createdAt: new Date().toISOString()
-  };
-  await addDoc(collection(db, "articles"), data);
-  loadArticles();
-}
+onAuthStateChanged(auth, (user) => {
+  if (user) {
+    loginForm.style.display = "none";
+    adminForm.style.display = "block";
+    loadArticles();
+  } else {
+    loginForm.style.display = "block";
+    adminForm.style.display = "none";
+  }
+});
 
 async function loadArticles() {
+  const snapshot = await getDocs(collection(db, "articles"));
   const container = document.getElementById("articlesList");
   container.innerHTML = "";
-  const snapshot = await getDocs(collection(db,"articles"));
-  snapshot.docs.forEach(docu => {
+  snapshot.forEach(docu => {
     const data = docu.data();
     const el = document.createElement("div");
-    el.innerHTML = `<strong>${data.title}</strong> (${data.category || "-"}) <button onclick="editArticle('${docu.id}')">Modifier</button>`;
+    el.className = "mb-4 p-2 border rounded";
+    el.innerHTML = `
+      <strong>${data.title}</strong>
+      <button onclick='editArticle("${docu.id}")' class="ml-2 bg-gray-200 px-2 rounded">Modifier</button>
+    `;
     container.appendChild(el);
   });
 }
 
-async function editArticle(id) {
-  const docRef = doc(db,"articles",id);
-  const docSnap = await getDocs(collection(db,"articles"));
-  // Pour simplifier : on charge l'article dans le formulaire pour édition
-  // On pourrait compléter avec updateDoc
+async function saveArticle(e) {
+  e.preventDefault();
+  const id = document.getElementById("articleId").value;
+  const title = document.getElementById("title").value;
+  const excerpt = document.getElementById("excerpt").value;
+  const content = document.getElementById("content").value;
+  const imageUrl = document.getElementById("imageUrl").value;
+  const imageAlt = document.getElementById("imageAlt").value;
+  const createdAt = new Date().toISOString();
+
+  if (id) {
+    const docRef = doc(db, "articles", id);
+    await updateDoc(docRef, { title, excerpt, content, imageUrl, imageAlt, updatedAt: createdAt });
+  } else {
+    await addDoc(collection(db, "articles"), { title, excerpt, content, imageUrl, imageAlt, createdAt, updatedAt: createdAt });
+  }
+
+  document.getElementById("articleForm").reset();
+  loadArticles();
+}
+
+window.editArticle = async function(id) {
+  const docRef = doc(db, "articles", id);
+  const docSnap = await docRef.get();
+  if (!docSnap.exists()) return;
+  const data = docSnap.data();
+  document.getElementById("articleId").value = id;
+  document.getElementById("title").value = data.title;
+  document.getElementById("excerpt").value = data.excerpt || '';
+  document.getElementById("content").value = data.content || '';
+  document.getElementById("imageUrl").value = data.imageUrl || '';
+  document.getElementById("imageAlt").value = data.imageAlt || '';
 }
 </script>
 <style>
-body { font-family:'Lexend', sans-serif; background:#f5f5f5; padding:20px; color:#1a1a1a; }
-input, textarea, button { margin:5px 0; font-family:'Lexend',sans-serif; }
+body { font-family:'Lexend', sans-serif; background: linear-gradient(135deg, #4a4a4a 0%, #4a4a4a 14.28%, #22c55e 14.28%, #22c55e 28.56%, #3b82f6 28.56%, #3b82f6 42.84%, #ffffff 42.84%, #ffffff 57.12%, #fbbf24 57.12%, #fbbf24 71.4%, #dc2626 71.4%, #dc2626 85.68%, #4a4a4a 85.68%, #4a4a4a 100%); color:#1a1a1a; min-height:100vh; padding:2rem;}
 </style>
 </head>
 <body>
-<section id="loginSection">
-<h2>Connexion Admin</h2>
-<input type="email" id="email" placeholder="Email"><br>
-<input type="password" id="password" placeholder="Mot de passe"><br>
-<button onclick="login()">Se connecter</button>
-</section>
+<h1>Admin Blog</h1>
 
-<section id="adminSection" style="display:none;">
-<h1>Administration du Blog</h1>
-<h2>Ajouter un article</h2>
-<label>Titre</label><br><input id="titleInput"><br>
-<label>Extrait</label><br><textarea id="excerptInput"></textarea><br>
-<label>Contenu</label><br><textarea id="contentInput"></textarea><br>
-<label>Catégorie</label><br><input id="categoryInput"><br>
-<label>Tags</label><br><input id="tagsInput"><br>
-<label>Image principale URL</label><br><input id="imageUrlInput"><br>
-<label>Alt de l'image</label><br><input id="imageAltInput"><br>
-<button onclick="addArticle()">Ajouter l'article</button>
-<h2>Articles existants</h2>
-<div id="articlesList"></div>
-</section>
+<form id="loginForm">
+  <input type="email" id="email" placeholder="Email" required class="border p-1">
+  <input type="password" id="password" placeholder="Mot de passe" required class="border p-1">
+  <button type="submit" class="bg-gray-700 text-white px-2 rounded">Se connecter</button>
+</form>
+
+<form id="adminForm" style="display:none;" onsubmit="saveArticle(event)">
+  <input type="hidden" id="articleId">
+  <label>Titre<input type="text" id="title" class="border p-1 w-full"></label><br>
+  <label>Extrait<input type="text" id="excerpt" class="border p-1 w-full"></label><br>
+  <label>Contenu<textarea id="content" class="border p-1 w-full"></textarea></label><br>
+  <label>Image principale URL<input type="url" id="imageUrl" class="border p-1 w-full"></label><br>
+  <label>Alt image<input type="text" id="imageAlt" class="border p-1 w-full"></label><br>
+  <button type="submit" class="bg-blue-600 text-white px-2 rounded">Publier / Mettre à jour</button>
+</form>
+
+<div id="articlesList" class="mt-4"></div>
 </body>
 </html>
